tests/ui/test-attrs/test-warns-dead-code.rs
//@ compile-flags: --test

#![deny(dead_code)]

fn dead() {} //~ error: function `dead` is never used

fn main() {}
